Closed Bug 505663 Opened 17 years ago Closed 17 years ago

nsCanvasRenderingContextGL* build failure after bug 753 fixed

Categories

(Core :: Graphics: ImageLib, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: t.matsuu, Assigned: t.matsuu)

References

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; ja-JP; rv:1.9.2a1pre) Gecko/20090722 Fedora/3.6a1pre-0.a1pre.2009072116.hg_d3e0648a5d54.fc11 Minefield/3.6a1pre Build Identifier: This bug is from bug 753 comment #102. We also remove gfxIImageFrame.h and nsIImage.h from files below: content/canvas/src/nsCanvasRenderingContextGL.cpp content/canvas/src/nsCanvasRenderingContextGL.h content/canvas/src/nsCanvasRenderingContextGLWeb20.cpp Reproducible: Always
Attachment #389873 - Flags: review?(joe)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Attachment #389873 - Flags: review?(joe) → review+
Blocks: 753
Keywords: checkin-needed
I've converted attachment 389873 [details] [diff] [review] to 'hg diff' format for easier check in.
Attachment #389873 - Attachment is obsolete: true
Assignee: nobody → t.matsuu
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: