Bug 505663. Remove obsolete header files from canvas3D. r=jdrew